fix(opt-in): updated the home page opt-in to avoid wrapping

--- a/wp-content/themes/lengstorf2015/assets/less/main.less
+++ b/wp-content/themes/lengstorf2015/assets/less/main.less
@@ -479,7 +479,7 @@ body {
 
 .hometown-hero__opt-in-input,.menu-search__input {
     position: relative;
-    width: 55vw;
+    width: 52vw;
     padding: 3.5vw;
     padding-left: 8vw;
     background: darken(@body-bg, 5%);
@@ -520,7 +520,7 @@ body {
 }
 
 .hometown-hero__opt-in-submit,.menu-search__submit {
-    width: 36vw;
+    width: 39vw;
     padding: 3.5vw 3vw;
     border: 2px solid lighten(@brand-primary, 5%);
     border-radius: 4px;
